#ifndef INITIALIZER_H
#define INITIALIZER_H

class Controller;

class Initializer {
public:
    void Initialize(Controller* controller);
};

#endif
