@startuml
title CPU Factory Simulator - Class Diagram

skinparam classAttributeIconSize 0
skinparam shadowing false
skinparam linetype ortho

abstract class Root {
  +~Root()
  +update(tick: int) {abstract}
}

interface MachineListener {
  +onProductGenerated(newProduct: Product*) {abstract}
}

interface ProductListener {
  +deleteProduct(product: Product*, state: ProductState) {abstract}
}

enum MachineState {
  MACHINE_IDLE
  MACHINE_PROCESSING
  MACHINE_BROKEN
}

enum Case {
  NORMAL
  BOTTLENECK
}

enum ProductType {
  RAW
  PATTERNED
  ETCHED
  DOPED
  CPU_TYPE
}

enum ProductState {
  IDLE
  DELETED
  DAMAGED
  GENERATED
  COMPLETED
}

class MachineData <<struct>> {
  +name: string
  +stateName: string
  +queueSize: int
  +maxQueueSize: int
  +outputNum: int
  +processTime: int
  +remainingTime: int
  +health: int
  +progress: int
  +breakdownChance: float
}

abstract class Product {
  -listener: ProductListener*
  #type: ProductType
  #state: ProductState
  --
  +Product(t: ProductType = RAW)
  +Product(other: Product&)
  +~Product()
  +getType(): ProductType
  +getState(): ProductState
  +setState(s: ProductState)
  +getTypeName(): string {abstract}
  +update(tick: int)
  +setListener(newListener: ProductListener*)
}

class RawWafer {
  +RawWafer()
  +getTypeName(): string
}

class PatternedWafer {
  +PatternedWafer()
  +PatternedWafer(other: Product&)
  +getTypeName(): string
}

class EtchedWafer {
  +EtchedWafer()
  +EtchedWafer(other: Product&)
  +getTypeName(): string
}

class DopedWafer {
  +DopedWafer()
  +DopedWafer(other: Product&)
  +getTypeName(): string
}

class CPU {
  +CPU()
  +CPU(other: Product&)
  +getTypeName(): string
}

class ProgressQueue {
  -queue: vector<Product*>
  -maxQueueSize: int = 6
  --
  +~ProgressQueue()
  +popQueue(): Product*
  +addQueue(product: Product*)
  +getQueueSize(): int
  +getMaxQueueSize(): int
  +reset()
}

class Durability {
  -health: int = 100
  -breakdown_chance: float
  -repair_time: int
  --
  +Durability(bc: float, rt: int)
  +decreaseHealth(amount: int)
  +checkBreakdown(): bool
  +repair()
  +breakdown()
  +getHealth(): int
  +getRepairTime(): int
  +reset()
  +getBreakdownChance(): float
}

abstract class Machine {
  -state: MachineState
  -processTime: int
  -currentProduct: Product*
  -output_num: int
  -remaining_time: int
  -listener: MachineListener*
  -nextMachine: Machine*
  #queue: ProgressQueue
  #durability: Durability
  #normalProcessTime: int
  #bottleneckProcessTime: int
  --
  +Machine(processT: int, repairT: int, breakdownC: float)
  +~Machine()
  +update(tick: int) {abstract}
  +getInfo(): MachineData {abstract}
  +switchCase(c: Case)
  +breakdown()
  +setNextMachine(next: Machine*)
  +getStateName(): string
  +getProgress(): int
  +getQueue(): ProgressQueue&
  +repair()
  +decreaseRemainingTime(amount: int)
  +isRemainTime(): bool
  +getRemainingTime(): int
  +setListener(newListener: MachineListener*)
  +reset()
  #getState(): MachineState
  #setState(s: MachineState)
  #getProcessTime(): int
  #setProcessTime(t: int)
  #getOutputNum(): int
  #setOutputNum(n: int)
  #getCurrentProduct(): Product*
  #setCurrentProduct(product: Product*)
  #setCaseProcessTimes(normalTime: int, bottleneckTime: int)
  #getProcessTimeForCase(c: Case): int
  #generateProduct(new_product: Product*): Product*
  #handleBrokenState()
  #fetchNextProduct()
  #getNextMachine(): Machine*
}

class Photolithography {
  +Photolithography()
  +update(tick: int)
  +getInfo(): MachineData
}

class Etcher {
  +Etcher()
  +update(tick: int)
  +getInfo(): MachineData
}

class IonImplantator {
  -nextMachine: Machine*
  --
  +IonImplantator()
  +update(tick: int)
  +getInfo(): MachineData
}

class Packager {
  +Packager()
  +update(tick: int)
  +getInfo(): MachineData
}

class Generator {
  -generate_time: int
  -remain_time: int
  -onElementGenerated: function<void(Root*)>
  --
  +Generator()
  +update(tick: int)
  +setGenerationCallback(cb: function<void(Root*)>)
  +reset()
  +generate()
}

class Controller {
  -products: vector<Product*>
  -machines: vector<Machine*>
  -generator: Generator*
  -newly_generated_products: vector<Product*>
  -products_to_delete: vector<Product*>
  -tick: int
  -lost_products_num: int
  -completed_products_num: int
  -running: bool
  -curr_case: Case
  --
  +~Controller()
  +addMachine(new_m: Machine*)
  +setGenerator(new_generator: Generator*)
  +onProductGenerated(newProduct: Product*)
  +deleteProduct(product: Product*, state: ProductState)
  +update()
  +getMachineInfo(i: int): MachineData
  +start()
  +pause()
  +isRunning(): bool
  +reset()
  +updateCase(c: Case)
  +addRawWafer(count: int)
  +repairMachine(index: int)
  +getCompletedCount(): int
  +getLostCount(): int
}

class Bridge {
  -controller: Controller*
  --
  +Bridge()
  +~Bridge()
  +getMachineName(index: int): string
  +getMachineState(index: int): string
  +getMachineHealth(index: int): int
  +getMachineProgress(index: int): int
  +getMachineBreakdownChance(index: int): float
  +getMachineProcessTime(index: int): int
  +getMachineRemainingTime(index: int): int
  +getMachineQueueSize(index: int): int
  +getRawWaferCount(): int
  +getPatternedWaferCount(): int
  +getEtchedWaferCount(): int
  +getDopedWaferCount(): int
  +getFinishedCPUCount(): int
  +getDefectiveCount(): int
  +updateCase(c: Case)
  +addRawWafer(count: int)
  +repairMachine(index: int)
  +start()
  +pause()
  +isRunning(): bool
  +reset()
  +update()
}

class Initializer {
  +Initialize(controller: Controller*)
}

Root <|-- Product
Root <|-- Machine
Root <|-- Generator

ProductListener <|.. Controller
MachineListener <|.. Controller

Product <|-- RawWafer
Product <|-- PatternedWafer
Product <|-- EtchedWafer
Product <|-- DopedWafer
Product <|-- CPU

Machine <|-- Photolithography
Machine <|-- Etcher
Machine <|-- IonImplantator
Machine <|-- Packager

Product --> ProductType
Product --> ProductState
Product --> ProductListener : notifies

Machine --> MachineState
Machine --> Case
Machine --> MachineData
Machine --> MachineListener : notifies
Machine *-- ProgressQueue
Machine *-- Durability
Machine o-- Product : currentProduct
Machine --> Machine : nextMachine

ProgressQueue o-- "0..*" Product

Generator ..> RawWafer : creates
Generator ..> Root : callback

Photolithography ..> PatternedWafer : creates
Etcher ..> EtchedWafer : creates
IonImplantator ..> DopedWafer : creates
Packager ..> CPU : creates

Controller *-- "0..*" Product
Controller *-- "0..*" Machine
Controller *-- Generator
Controller --> Case
Controller ..> MachineData

Bridge *-- Controller
Initializer ..> Controller
Initializer ..> Photolithography
Initializer ..> Etcher
Initializer ..> IonImplantator
Initializer ..> Packager
Initializer ..> Generator

note right of Initializer
  Factory line:
  Photolithography -> Etcher
  -> IonImplantator -> Packager
end note

note bottom of Controller
  Owns generated products, machines, and generator.
  Receives machine/product events through listener interfaces.
end note

@enduml
